--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,175 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:background="@mipmap/two"
+    android:alpha="0.8"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.iti.tripplanner.MainActivity">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_gravity="center_horizontal"
+        android:orientation="vertical"
+        >
+
+        <ImageView
+            android:layout_width="250dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:paddingTop="30dp"
+
+            android:adjustViewBounds="true"
+            android:maxWidth="42dp"
+            android:maxHeight="42dp"
+            android:scaleType="fitCenter"
+            android:src="@mipmap/logo7"
+            android:backgroundTint="@color/white"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Easy Trip"
+            android:fontFamily="serif"
+            android:textColor="@color/white"
+            android:gravity="center_horizontal"
+            android:textSize="25dp"
+            android:layout_marginBottom="15dp"
+            />
+    </LinearLayout>
+
+    <EditText
+        android:layout_width="250dp"
+        android:layout_gravity="center_horizontal"
+        android:hint="Email"
+        android:textColorHint="@color/silver"
+        android:padding="5dp"
+        android:textColor="@color/white"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/Email"
+        android:background="@drawable/border_style"
+
+        />
+
+
+    <EditText
+        android:layout_width="250dp"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:layout_marginBottom="20dp"
+        android:textColorHint="@color/silver"
+        android:padding="5dp"
+        android:textColor="@color/white"
+        android:background="@drawable/border_style"
+        android:layout_gravity="center_horizontal"
+        android:layout_height="wrap_content"
+        android:id="@+id/Pass"
+        />
+
+
+
+    <Button
+        android:id="@+id/Login"
+        android:layout_width="200dp"
+        android:layout_marginBottom="5dp"
+        android:textColor="@color/white"
+        android:background="@color/orange"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Login" />
+    <TextView
+        android:id="@+id/Register"
+        android:layout_width="match_parent"
+        android:layout_height="22dp"
+        android:text="Register Now !"
+        android:textColor="@color/white"
+        android:textSize="15dp"
+        android:gravity="center_horizontal"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="1dp"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/white"
+        android:textSize="17dp"
+        android:text="_OR_"
 
-</android.support.constraint.ConstraintLayout>
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="4"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:orientation="horizontal"
+            android:paddingTop="25dp"
+            >
+
+            <com.shaishavgandhi.loginbuttons.GooglePlusButton
+                android:id="@+id/google"
+                android:layout_above="@+id/google"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:layout_margin="5dp"
+                android:text="Sign in with Google"
+                android:layout_height="wrap_content"
+                >
+            </com.shaishavgandhi.loginbuttons.GooglePlusButton>
+
+            <com.shaishavgandhi.loginbuttons.FacebookButton
+                android:id="@+id/facebook"
+                android:layout_above="@+id/facebook"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:layout_margin="5dp"
+                android:text="Sign in with Facebook"
+                android:layout_height="wrap_content"
+                >
+            </com.shaishavgandhi.loginbuttons.FacebookButton>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:orientation="horizontal"
+            android:paddingLeft="1dp"
+
+            >
+            <com.shaishavgandhi.loginbuttons.TwitterButton
+                android:id="@+id/twitter"
+                android:layout_above="@+id/twitter"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:layout_margin="5dp"
+                android:text="Sign in with Twitter"
+                android:layout_height="wrap_content"
+                >
+            </com.shaishavgandhi.loginbuttons.TwitterButton>
+
+
+        </LinearLayout>
+    </LinearLayout>
+
+</LinearLayout>
+
+
+
+
+
